# pyPERM

./: README.md  a  b  c  setup.cfg
pyPERM-DecisionTree/: perm.py
pyPERM-DecisionTree.egg.info/: PKG-INFO  SOURCES.txt
pyPERM-DecisionTree/pyPERM.egg-info/: PKG-INFO  entry_points.txt
pyPERM.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyPERM_DecisionTree/: perm.py
pyPERM_DecisionTree.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
