[metadata]
name = pyPERM
version = 0.1.0
author = Richard L Holbert
author_email = rholbert@gmail.com
description = A text based decision tree builder
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/buckeye43210/pyPERM
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
# package_dir =
#     = pyPERM
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    perm = pyPERM.perm:main

